Fix spacing and improve text structure in HTML; enhance styles for subscription and why-us sections in CSS

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
   --Teal-2: hsl(204, 43%, 93%);
   --Gray: hsl(218, 22%, 67%);
+  --Shadow: rgba(0, 0, 0, 0.15);
 }
 
 body {
@@ -26,16 +27,18 @@ body {
 }
 
 main {
-  padding: 1rem;
+  margin: 2rem 1rem;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  box-shadow: 0 0.6rem 1rem var(--Shadow);
 }
 
 main section:nth-child(1),
-main section:nth-child(2),
-main section:nth-child(3) {
+main section:nth-child(2) {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1.8rem 1.5rem;
+  padding: 2rem 1.8rem;
 }
 
 h1 {
@@ -63,13 +66,39 @@ p {
 
 .subscription {
   background-color: var(--Teal-1);
+  color: var(--Teal-2);
+}
+
+.subscription span {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.subscription p:nth-child(3) {
+  margin: -1rem 0 1rem;
+}
+
+.subscription button {
+  background-color: var(--Green);
+  border: none;
+  height: 3rem;
+  color: inherit;
+  font-weight: 700;
+  border-radius: 0.3rem;
+  box-shadow: 0 0.6rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .why-us {
   background-color: var(--Gray);
+  color: var(--Teal-2);
+  padding: 2rem 1.8rem;
 }
 
-@media (min-width: 900px) {
+.why-us h1 {
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 700px) {
   main {
     max-width: 40rem;
     display: grid;
